WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11916
REGRESSION (SearchField): RTL search fields are mixed up
https://bugs.webkit.org/show_bug.cgi?id=11916
Summary
REGRESSION (SearchField): RTL search fields are mixed up
mitz
Reported
2006-12-21 09:17:44 PST
RTL search fields are mixed up. Open the URL and notice how despite the close button (x) being on the right and the popup button (magnifier glass) being on the left, if you actually click in either side you get the opposite behavior. The inner text's padding is also reversed, so that on the left the text renders over the magnifier glass and on the right there's a big gap between the text and the close button. I think the buttons should stay like this (popup on the left, close on the right) and the other stuff should be made consistent with them, like in the LTR case.
Attachments
Keep the cancel button on the right and the results button on the left
(42.40 KB, patch)
2007-02-05 12:19 PST
,
mitz
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2007-01-28 19:05:13 PST
<
rdar://problem/4960255
>
mitz
Comment 2
2007-02-05 12:19:50 PST
Created
attachment 12940
[details]
Keep the cancel button on the right and the results button on the left This patch makes RTL search fields look and behave like they do in Tiger, namely have the results button on the left and the cancel button on the right, just like in the LTR case. The only difference is that text is initially scrolled to the right (the beginning), which is a slight improvement over Tiger and consistent with other text controls. Looking at the code, I realize that some effort has been made to make RTL fields a mirror image of LTR fields, but I'm afraid at this time it would be wrong to do so on the Mac.
Sam Weinig
Comment 3
2007-02-05 15:17:29 PST
Landed in
r19412
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug