LayoutTests:

Reviewed by Adele.

        - test for http://bugs.webkit.org/show_bug.cgi?id=11916
          REGRESSION (SearchField): RTL search fields are mixed up

        * fast/forms/search-rtl-expected.checksum: Added.
        * fast/forms/search-rtl-expected.png: Added.
        * fast/forms/search-rtl-expected.txt: Added.
        * fast/forms/search-rtl.html: Added.

WebCore:

        Reviewed by Adele.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11916
          REGRESSION (SearchField): RTL search fields are mixed up

        Test: fast/forms/search-rtl.html

        * rendering/RenderTextControl.cpp:
        (WebCore::RenderTextControl::createInnerBlockStyle): Always make the inner
        block LTR so that the results button will be on the left and the cancel
        button will be on the right.
        (WebCore::RenderTextControl::createInnerTextStyle): Inherit the direction
        property directly from the control so that it won't be masked by the inner
        block's LTR override.
        (WebCore::RenderTextControl::nodeAtPoint): Removed code that swapped the
        results and cancel buttons for RTL.
        (WebCore::RenderTextControl::forwardEvent): Ditto.
        (WebCore::RenderTextControl::clientPaddingLeft): Ditto.
        (WebCore::RenderTextControl::clientPaddingRight): Ditto.



Canonical link: https://commits.webkit.org/16322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19412 268f45cc-cd09-0410-ab3c-d52691b4dbfc